# ProjectManager

./: CMakeLists.txt  Course.cpp  Course.h  Project.cpp  Project.h  ProjectReader.cpp  ProjectReader.h  README.md  main.cpp
Project Polymorphic Classes/: Homework.h  Presentation.h  Project.cpp  Project.h
Project_Polymorphic_Classes/: Homework.h  Presentation.h  Project.cpp  Project.h  Test.h
